[gd_scene load_steps=9 format=3 uid="uid://cmhvj6hhu8lpl"]

[ext_resource type="Script" uid="uid://441f0cqjrhua" path="res://scripts/menu.gd" id="1_4ytvr"]
[ext_resource type="Texture2D" uid="uid://bjxykgdhnuhja" path="res://assets/options_normal.png" id="1_mhnvy"]
[ext_resource type="FontFile" uid="uid://csxn3hfftru31" path="res://assets/Font.ttf" id="2_4ytvr"]
[ext_resource type="PackedScene" uid="uid://dtaqdvklyo2kt" path="res://scenes/booting.tscn" id="2_g3eks"]
[ext_resource type="PackedScene" uid="uid://dunxj887bjhgr" path="res://scenes/options.tscn" id="3_13sgg"]
[ext_resource type="Texture2D" uid="uid://r5kmh3ngvj56" path="res://assets/user_normal.png" id="3_g3eks"]
[ext_resource type="Texture2D" uid="uid://bigtykn6s7h27" path="res://assets/poweroff_normal.png" id="4_v86rl"]
[ext_resource type="AudioStream" uid="uid://cjusiahu3320w" path="res://assets/login_screen.wav" id="7_v86rl"]

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ytvr")
boot_scene = ExtResource("2_g3eks")
options_scene = ExtResource("3_13sgg")

[node name="OptionsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -42.5
offset_right = 45.5
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("1_mhnvy")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="OptionsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = 48.0
offset_right = 44.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_4ytvr")
theme_override_font_sizes/font_size = 23
text = "Options"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -42.5
offset_right = -80.0
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("3_g3eks")
expand_icon = true

[node name="Label" type="Label" parent="StartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = 48.5
offset_right = 40.5
offset_bottom = 72.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_4ytvr")
theme_override_font_sizes/font_size = 23
text = "Start"
horizontal_alignment = 1

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 83.0
offset_top = -42.5
offset_right = 168.0
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("4_v86rl")
expand_icon = true

[node name="Label" type="Label" parent="QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = 49.5
offset_right = 32.5
offset_bottom = 72.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_4ytvr")
theme_override_font_sizes/font_size = 23
text = "Exit"
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_v86rl")
autoplay = true
